--- a/dom/index.html
+++ b/dom/index.html
@@ -14,8 +14,18 @@
 
 <body class="bg-black">
     <div >
-        <h1 id="title" class="heading">Dom Learning on chai aur code</h1>
+        <h1 id="title" class="heading">Dom Learning on chai aur code<span style="display: none;" > Test Text</span></h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h1>Lorem ipsum dolor sit amet consectetur.</h1>
         <p>Lorem ipsum dolor, sit amet. </p>
+        <input type="password" name="" id="">
+        <ul>
+            <li class="list-item">One</li>
+            <li class="list-item">Two</li>
+            <li class="list-item">Three</li>
+            <li class="list-item">Four</li>
+        </ul>
 
     </div>
 </body>
